update jvm note